[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "point9-agent-platform"
version = "1.1.0"
description = "Foundation platform for Point9 AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Point9 Team"}
]

dependencies = [
    "langgraph>=0.2.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
storage = [
    "boto3>=1.28.0",
    "pymongo>=4.5.0",
]
eval = [
    "ragas>=0.1.0,<0.3.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "rouge_score>=0.1.2",
    "bert_score>=0.3.13",
    "langchain-community>=0.0.10",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["point9_platform*"]
exclude = ["sample_agent*", "tests*"]
